--- a/frontend/src/app/routes/mis-dispositivos/mis-dispositivos.component.html
+++ b/frontend/src/app/routes/mis-dispositivos/mis-dispositivos.component.html
@@ -2,7 +2,7 @@
 
 <div class="py-1 px-3">
   <div class="p-2">
-    <!-- Botón para abrir el popup de agregar dispositivo -->
+
     <button class="bg-primary text-white px-4 py-2 rounded mb-4 mx-1" (click)="openDevicePopup()">Agregar Dispositivo</button>
   </div>
 
@@ -11,6 +11,16 @@
       <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 gap-4">
         <!-- Tarjeta de dispositivo -->
         <div *ngFor="let dispositivo of dispositivos" class="bg-white p-4 rounded-lg shadow-md transform transition-transform hover:scale-105 flex flex-col items-center">
+
+          <div class="absolute top-2 right-2 flex space-x-2">
+            <button (click)="editDevice(dispositivo)" class="text-blue-500 hover:text-blue-700 p-1">
+              <i class="fa-solid fa-pencil"></i>
+            </button>
+            <button (click)="deleteDevice(dispositivo.deviceId)" class="text-red-500 hover:text-red-700">
+              <i class="fa-solid fa-trash"></i>
+            </button>
+          </div>
+
           <div class="bg-blue-100 rounded-full p-3 mb-2 flex items-center justify-center w-16 h-16">
             <img [src]="'../../../assets/icon/' + dispositivo.name + '.png'" alt="{{ dispositivo.name }}" width="40" height="40">
           </div>
