se agrega los titulos de  tutoriales Lytics

--- a/frontend/src/app/routes/guides/guides.component.html
+++ b/frontend/src/app/routes/guides/guides.component.html
@@ -12,7 +12,7 @@
             <img src="assets/img/Lytics_new_logo.png" alt="Lytics Logo" class="h-32 w-full object-contain mb-2 rounded">
             <p>Lytics.pdf</p>
             <p class="text-sm">289KB</p>
-            <a href="assets/pdf/ManualLytiscv0.2.pdf" download class="text-blue-500 hover:text-blue-700">Descargar</a>
+            <a href="assets/pdf/LyticsApp.pdf" download class="text-blue-500 hover:text-blue-700">Descargar</a>
           </div>
 
           <div class="bg-white p-4 rounded shadow flex flex-col items-center">
@@ -26,14 +26,14 @@
             <img src="assets/img/domotica%20buenas%20practicas.jpeg" alt="Buenas Prácticas Domóticas" class="h-32 w-full object-contain mb-2 rounded">
             <p>Información sobre domóticas.pdf</p>
             <p class="text-sm">129KB</p>
-            <a href="assets/pdf/ManualLytiscv0.2.pdf" download class="text-blue-500 hover:text-blue-700">Descargar</a>
+            <a href="assets/pdf/GuíaDomóticaLytics.pdf" download class="text-blue-500 hover:text-blue-700">Descargar</a>
           </div>
 
           <div class="bg-white p-4 rounded shadow flex flex-col items-center">
             <img src="assets/img/veneficios.jpeg" alt="Software Lytics" class="h-32 w-full object-contain mb-2 rounded">
             <p>Software Lytics.pdf</p>
             <p class="text-sm">490KB</p>
-            <a href="assets/pdf/ManualLytiscv0.2.pdf" download class="text-blue-500 hover:text-blue-700">Descargar</a>
+            <a href="assets/pdf/SoftwareLytics.pdf" download class="text-blue-500 hover:text-blue-700">Descargar</a>
           </div>
         </div>
       </div>
@@ -54,7 +54,7 @@
           </ul>
         </div>
         <div class="w-full md:w-auto">
-          <iframe width="100%" height="250" src="https://www.youtube.com/embed/8aGYzXi0YrU" title="Video sobre ahorro de energía" class="rounded-lg" allowfullscreen></iframe>
+          <iframe width="100%" height="250" src="assets/img/LyticsVideo.mp4" title="Video sobre ahorro de energía" class="rounded-lg" allowfullscreen></iframe>
         </div>
       </div>
 
