--- a/frontend/src/app/routes/mis-dispositivos/mis-dispositivos.component.html
+++ b/frontend/src/app/routes/mis-dispositivos/mis-dispositivos.component.html
@@ -13,6 +13,9 @@
         <div *ngFor="let dispositivo of dispositivos" class="bg-white p-4 rounded-lg shadow-md transform transition-transform hover:scale-105 flex flex-col items-center">
 
           <div class="absolute top-2 right-2 flex space-x-2">
+            <button (click)="goToConfiguration(dispositivo.name)" class="text-green-500 hover:text-green-700 p-1">
+              <i class="fa-solid fa-cog"></i>
+            </button>
             <button (click)="editDevice(dispositivo)" class="text-blue-500 hover:text-blue-700 p-1">
               <i class="fa-solid fa-pencil"></i>
             </button>
