--- a/frontend/src/app/routes/configuracion/configuracion.component.html
+++ b/frontend/src/app/routes/configuracion/configuracion.component.html
@@ -1,7 +1,7 @@
 
-<app-panel-title [title]="title" description="Configura las alertas que deseas recibir para este dispositivo."></app-panel-title>
+<!--<app-panel-title [title]="title" description="Configura las alertas que deseas recibir para este dispositivo."></app-panel-title>
 
-<!--
+
 <div class="container mx-auto py-4 px-10">
   <h1 class="text-xl font-semibold mb-4">Perfiles sugeridos</h1><br>
   <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4">
@@ -109,8 +109,11 @@
   </div>
 </div>
 -->
-
+<div class="flex justify-center my-4">
+  <button class="bg-primary text-white px-4 py-2 rounded mx-1" (click)="goBack()">Volver a Dispositivos</button>
+</div>
 <div class="container mx-auto py-6 px-10">
+
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 mb-6">
 
 
