--- a/frontend/src/app/core/sidebar/sidebar.component.html
+++ b/frontend/src/app/core/sidebar/sidebar.component.html
@@ -74,12 +74,12 @@
           <span *ngIf="isSidebarOpen" class="ml-2 text-base">Mi Suscripción</span>
         </a>
       </li>
-      <li class="p-2">
+      <!--<li class="p-2">
         <a [routerLink]="['configuracion']" class="flex items-center p-2 rounded hover:bg-blue-100 transition" title="Configuracion">
           <i class="inline-block fa-lg fa-solid fa-cog"></i>
           <span *ngIf="isSidebarOpen" class="ml-2 text-base">Configuración</span>
         </a>
-      </li>
+      </li>-->
       <li class="p-2">
         <a (click)="logout()" class="flex items-center p-2 rounded hover:bg-blue-100 transition" title="Desloguearse">
           <i class="inline-block fa-lg fa-solid fa-right-from-bracket"></i>
