--- a/frontend/src/app/routes/dashboard/dashboard/dashboard.component.html
+++ b/frontend/src/app/routes/dashboard/dashboard/dashboard.component.html
@@ -16,7 +16,7 @@
 </div>
 
 <div class="container mx-auto py-1">
-  <div class="grid grid-cols-2 md:grid-cols-4 gap-6 px-3">
+  <div class="grid grid-cols-2 md:grid-cols-5 gap-6 px-3">
     <app-card-real-time id="step1"
       [iconClasses]="'fas fa-clock'"
       [titleCard]="'Horario'"
@@ -48,7 +48,16 @@
       [maxProgress]="100"
       [colorProgress]="'progress progress-warning w-ful'"
     ></app-card-real-time>
-
+    <button class="flex items-center mb-1 w-full h-full p-4 bg-green-500 transform transition-transform hover:scale-105 rounded-lg">
+      <a [routerLink]="['/home/huella']" class="flex items-center w-full h-full">
+        <div class="flex items-center justify-center h-10 w-10 rounded-lg bg-gray-100">
+          <img src="../../../../assets/img/huella-carbono-co2-sin-fondo.png" alt="Descripción de la imagen" class="h-full "> 
+        </div>
+        <div class="ml-3">
+          <span class="text-lg font-semibold">Tu Huella de Carbono</span> 
+        </div>
+      </a>
+    </button>
   </div>
 </div>
 
