se agrega descripciones de las secciones, se cambia el nombre de card consumo del dashboard y se mejora estilos de la sección guías y tutoriales.

--- a/frontend/src/app/routes/carbon-footprint/carbon-footprint/carbon-footprint.component.html
+++ b/frontend/src/app/routes/carbon-footprint/carbon-footprint/carbon-footprint.component.html
@@ -1,4 +1,4 @@
-<app-panel-title title="Tu Huella de Carbono" description="Descubre el impacto de tu consumo energético en el medio ambiente y aprende cómo reducir tu huella de carbono para un futuro más sostenible."></app-panel-title>
+<app-panel-title title="Tu Huella de Carbono" description="Visualiza el impacto ambiental que genera tu consumo energético. Puedes ver el impacto sumado de todos tus dispositivos o de un dispositivo en particular."></app-panel-title>
 <div class="py-1 px-3">
   <div class="flex items-center space-x-4">
 
