--- a/frontend/src/app/routes/dashboard/dashboard/dashboard.component.html
+++ b/frontend/src/app/routes/dashboard/dashboard/dashboard.component.html
@@ -42,7 +42,7 @@
 
     <app-card-real-time id="step4"
       [iconClasses]="'fas fa-dollar-sign'"
-      [titleCard]="'Consumo'"
+      [titleCard]="'Consumo Mensual Actual'"
       [subtitleCard]="'Consumo $'"
       [valueProgress]="10"
       [maxProgress]="100"
