--- a/frontend/src/app/routes/guides/guides.component.html
+++ b/frontend/src/app/routes/guides/guides.component.html
@@ -1,7 +1,7 @@
 <div class="flex flex-col full-screen">
   <div class="py-1 px-3">
     <!-- Panel Title-->
-    <app-panel-title title="Guías y Tutoriales" description="Explora nuestras guías y tutoriales para aprender más sobre nuestras "></app-panel-title>
+    <app-panel-title title="Guías y Tutoriales" description="Explora nuestras guías y tutoriales para aprender más sobre nuestros "></app-panel-title>
 
 
     <div class="py-1 px-3">
@@ -37,27 +37,28 @@
           </div>
         </div>
       </div>
-
-      <!-- Sección de Beneficios y Video -->
-      <div class="mt-8 p-2 bg-teal-30 rounded-lg shadow-md flex flex-col md:flex-row items-center space-y-4 md:space-y-0 md:space-x-8">
-        <div class="flex-1 mb-4 md:mb-0">
-          <h3 class="text-2xl font-semibold mb-2">Crea un hogar inteligente y ahorra energía</h3>
-          <p class="text-gray-800 mb-4">
-            Convierte tu hogar en un espacio más eficiente, económico y sostenible. Con tecnologías inteligentes, puedes:
-          </p>
-          <ul class="list-disc ml-5 text-gray-800 mb-4">
-            <li>Controlar y automatizar la iluminación para reducir el consumo energético.</li>
-            <li>Optimizar la climatización ajustando la temperatura automáticamente.</li>
-            <li>Supervisar el consumo de electrodomésticos y apagarlos cuando no se usan.</li>
-            <li>Recibir notificaciones en tiempo real sobre el uso de energía.</li>
-            <li>Monitorear patrones de consumo para maximizar el ahorro.</li>
-          </ul>
-        </div>
-        <div class="w-full md:w-auto">
-          <iframe width="100%" height="250" src="https://www.youtube.com/embed/8aGYzXi0YrU" title="Video sobre ahorro de energía" class="rounded-lg" allowfullscreen></iframe>
-        </div>
-      </div>
-
+<!-- Sección de Beneficios y Video -->
+<div class="mt-8 p-4 bg-teal-30 rounded-lg shadow-md">
+  <h3 class="text-2xl font-semibold mb-4 text-center">Crea un hogar inteligente y ahorra energía</h3>
+  <p class="text-gray-800 mb-6 text-center">
+    Convierte tu hogar en un espacio más eficiente, económico y sostenible. Con tecnologías inteligentes, puedes:
+  </p>
+  <div class="flex flex-col items-center space-y-6">
+    <div class="w-full md:w-3/4 lg:w-2/3">
+      <ul class="list-disc ml-5 text-gray-800 mb-4 flex flex-col items-center">
+        <li>Controlar y automatizar la iluminación para reducir el consumo energético.</li>
+        <li>Optimizar la climatización ajustando la temperatura automáticamente.</li>
+        <li>Supervisar el consumo de electrodomésticos y apagarlos cuando no se usan.</li>
+        <li>Recibir notificaciones en tiempo real sobre el uso de energía.</li>
+        <li>Monitorear patrones de consumo para maximizar el ahorro.</li>
+      </ul>
+    </div>
+    <div class="w-full md:w-3/4 lg:w-2/3">
+      <iframe width="100%" height="400" src="https://www.youtube.com/embed/8aGYzXi0YrU" title="5 TRUCOS para AHORRAR ENERGÍA ELÉCTRICA" class="rounded-lg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </div>
+  </div>
+</div>
+    
       <!-- Sección de Imágenes -->
       <div class="bg-white p-6 rounded-lg shadow-lg mt-6">
         <h2 class="text-2xl font-bold mb-4 text-center">Cómo hacer tu casa más eficiente</h2>
