--- a/frontend/src/app/routes/mis-dispositivos/mis-dispositivos.component.html
+++ b/frontend/src/app/routes/mis-dispositivos/mis-dispositivos.component.html
@@ -1,4 +1,4 @@
-<app-panel-title title="Mis Dispositivos" description="Esta es una breve descripción de la página de inicio."></app-panel-title>
+<app-panel-title title="Mis Dispositivos" description="Gestión de Dispositivos: Encuentra, agrega, edita y configura alertas para todos tus dispositivos."></app-panel-title>
 
 <div class="py-1 px-3">
   <div class="p-2">
