merger /correciones-frontend-mvp3-eve/tutorials-Lytics

--- a/frontend/src/app/routes/dashboard/dashboard/dashboard.component.html
+++ b/frontend/src/app/routes/dashboard/dashboard/dashboard.component.html
@@ -42,7 +42,7 @@
 
     <app-card-real-time id="step4"
       [iconClasses]="'fas fa-dollar-sign'"
-      [titleCard]="'Consumo Mensual Actual'"
+      [titleCard]="'Consumo Mensual'"
       [subtitleCard]="'Consumo $'"
       [valueProgress]="10"
       [maxProgress]="100"
@@ -51,10 +51,10 @@
     <button class="flex items-center mb-1 w-full h-full p-4 bg-green-500 transform transition-transform hover:scale-105 rounded-lg">
       <a [routerLink]="['/home/huella']" class="flex items-center w-full h-full">
         <div class="flex items-center justify-center h-10 w-10 rounded-lg bg-gray-100">
-          <img src="../../../../assets/img/huella-carbono-co2-sin-fondo.png" alt="Descripción de la imagen" class="h-full "> 
+          <img src="../../../../assets/img/huella-carbono-co2-sin-fondo.png" alt="Descripción de la imagen" class="h-full ">
         </div>
         <div class="ml-3">
-          <span class="text-lg font-semibold">Tu Huella de Carbono</span> 
+          <span class="text-lg font-semibold">Tu Huella de Carbono</span>
         </div>
       </a>
     </button>
