--- a/frontend/src/app/routes/alerts/alerts.component.html
+++ b/frontend/src/app/routes/alerts/alerts.component.html
@@ -22,9 +22,9 @@
       <tbody>
       <tr *ngFor="let alert of displayedAlerts" class="hover:bg-gray-100">
         <td>{{ alert.name }}</td>
-        <td>{{ alert.date | date: 'yyyy-MM-dd HH:mm:ss' }}</td>
+        <td>{{ alert.date | date: 'dd-MM-YYYY HH:mm' }}</td>
         <td>{{ alert.alertMessage }}</td>
-        <td>{{ alert.value }}</td>
+        <td>{{ alert.value.toFixed(0) }}</td>
       </tr>
       </tbody>
     </table>
