--- a/frontend/src/app/routes/reportes/reportes.component.html
+++ b/frontend/src/app/routes/reportes/reportes.component.html
@@ -15,7 +15,7 @@
   <table class="table-auto w-full max-w-4xl mx-auto border-collapse border border-gray-300 shadow-lg rounded-lg overflow-hidden">
     <thead>
     <tr class="bg-gray-200 text-gray-700">
-      <th class="border border-gray-300 p-4 text-center">Locacion</th>
+      <th class="border border-gray-300 p-4 text-center">Locación</th>
       <th class="border border-gray-300 p-4 text-center">Identificador</th>
       <th class="border border-gray-300 p-4 text-center">Dispositivo</th>
       <th class="border border-gray-300 p-4 text-center">Consumo</th>
