--- a/frontend/src/app/routes/reportes/reportes.component.html
+++ b/frontend/src/app/routes/reportes/reportes.component.html
@@ -4,8 +4,8 @@
   <div class="flex flex-col  space-y-4 py-6 px-10">
     <h2>Filtrar por Fecha</h2>
     <div class="flex space-x-4">
-      <input [(ngModel)]="startTime" type="date" class="border border-gray-300 p-2 rounded" [disabled]="!selectedType">
-      <input [(ngModel)]="endTime" type="date" class="border border-gray-300 p-2 rounded" [disabled]="!selectedType">
+      <input [(ngModel)]="startTime" type="date" class="border border-gray-300 p-2 rounded" >
+      <input [(ngModel)]="endTime" type="date" class="border border-gray-300 p-2 rounded" >
       <button (click)="generateReporteDatos()" class="bg-primary text-white p-2 rounded hover:bg-primaryhover">Buscar</button>
     </div>
   </div>
